# countryfetch

./: .clippy.toml  .rustfmt.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  countries.rkyv.generate.rs  dist-workspace.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: audit.yml  build.yml  check.yml  ci.yml  release.yml
countryfetch/: Cargo.toml
countryfetch/src/: args.rs  cache.rs  country.rs  country_extras.rs  country_format.rs  generated.rs  lib.rs  main.rs
gen_country/: Cargo.toml
gen_country/src/: extras.rs  lib.rs
gen_country/tests/: liberland.rs
generate_country_data/: Cargo.toml  README.md
generate_country_data/src/: codegen.rs  country_parts.rs  main.rs
src/: args.rs  cache.rs  cli.rs  countries.rs  country.rs  country_display.rs  country_format.rs  extra_country_data.rs  gen_countries.rs  generated_continent_data.rs  generated_country_data.rs  lib.rs  location.rs  main.rs
wix/: main.wxs
xtask/: Cargo.toml  countries.json  country.rs  flag.rs  innit.rs  mod.rs
xtask/src/: codegen.rs  country_parts.rs  main.rs
