[package]
name = "countryfetch"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/nik-rev/countryfetch"
homepage = "https://github.com/nik-rev/countryfetch"
description = "Fancy CLI tool to show information about your country"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subdef = "0.1"
uneval = "0.2"

[dependencies]
flate2 = "1"
time-tz = { version = "1", features = ["system"] }
strum = { version = "0.27", features = ["derive"] }
rkyv = "0.8"
subdef = "0.1"
public-ip = "0.2"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
] }
# PNG -> ASCII
rascii_art = "0.4.5"
# NOTE: This must be the same version as what is required by `rascii_art`
image = "0.25.6"
separator = "0.4"
# colored strings
colored = "3.0"
clap = { version = "4.5", features = [
  "derive",
  "wrap_help",
  "unstable-markdown",
] }
anstyle = "1.0"
directories = "6.0"

textwrap = "0.16"

openssl = { version = "0.10", features = ["vendored"] }

rand = "0.9.2"
eyre = "0.6.12"
fs-err = "3.2.0"
docstr = "0.4.10"
colored_json = "5.0.0"
simply_colored = "0.1.7"
anstream = "1.0.0"
itertools = "0.14.0"
ureq = { version = "3.2.0", features = ["json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"

[lints.rust]
unused_qualifications = "warn"
