[package]
name = "countryfetch"
version = "0.2.0"
edition = "2024"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/countryfetch"
homepage = "https://github.com/nik-rev/countryfetch"
description = "Fancy CLI tool to show information about your country"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[package.metadata.wix]
upgrade-guid = "857C01A7-3368-42B5-A9BC-4E5B1B54B3F9"
path-guid = "C9B676B2-8632-4B58-AFE9-EADC972012B2"
license = false
eula = false

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subdef = "0.1"
uneval = "0.2"

[dependencies]
flate2 = "1"
strum = { version = "0.27", features = ["derive"] }
rkyv = "0.8"
subdef = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
separator = "0.4"
# colored strings
colored = "3.0"
clap = { version = "4.5", features = [
  "derive",
  "wrap_help",
  "unstable-markdown",
] }
anstyle = "1.0"

textwrap = "0.16"
eyre = "0.6.12"
docstr = "0.4.10"
colored_json = "5.0.0"
simply_colored = "0.1.7"
anstream = "1.0.0"
ureq = { version = "3.2.0", features = ["json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"

[lints.rust]
unused_qualifications = "warn"
