[package]
name = "countryfetch"
version = "0.1.0"
edition = "2024"

[lib]
name = "countryfetch"
path = "src/lib.rs"

[[bin]]
name = "countryfetch"
path = "src/main.rs"

[dependencies]
public-ip = "0.2"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
] }

# PNG -> ASCII
rascii_art = "0.4.5"
# NOTE: This must be the same version as what is required by `rascii_art`
image = "0.24.9"

separator = "0.3"
