[package]
name = "countryfetch"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/nik-rev/countryfetch"
homepage = "https://github.com/nik-rev/countryfetch"
description = "A Command-line tool similar to Neofetch for obtaining information about your country"
license = "MIT"

[lib]
name = "countryfetch"
path = "src/lib.rs"

[[bin]]
name = "countryfetch"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
gen_country = { path = "../gen_country", version = "0.1.0" }
public-ip = "0.2"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
] }
# PNG -> ASCII
rascii_art = "0.4.5"
# NOTE: This must be the same version as what is required by `rascii_art`
image = "0.24.9"
separator = "0.3"
# colored strings
colored = "3.0"
clap = { version = "4.5", features = ["color"] }
anstyle = "1.0"
directories = "6.0"

textwrap = "0.16"
