[package]
name = "generate_country_data"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata.dist]
dist = false
lints.workspace = true

[dependencies]
# SVG -> PNG
resvg = "0.45"
# PNG -> ASCII
rascii_art = "0.4.5"

# case conversion
heck = "0.5"

# async runtime
tokio = { version = "1.43", features = ["full"] }

# --- Obtain country data from the JSON API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
] }
# ---

futures = "0.3"

# NOTE: This must be the same version as what is required by `rascii_art`
image = "0.24.9"

rayon = "1.10"

countryfetch = { path = ".." }

deunicode = "1.6"

palette_extract = "0.1"

strum = { version = "0.27", features = ["derive"] }

# proper lexical sort
icu_collator = "2.0"
